# sgwiki.github.io

./: .env.example  .gitignore  AGENTS.md  Makefile  PROJECT_ANALYSIS.md  README.md  RUN_STEPS.md  makewiki_all_runs.sh  makewiki_sample.sh  mkdocs.yml  package-lock.json  pyproject.toml  request_test.sh  run_makewiki.sh
docs/: SG 위키 현실 구축 계획.md  architecture.md  claude-mem-적용-연구.md  holyclaude-wiki-agent-팀-설계.md  mcp 정리.md  plan.md  project-status.md  qa_wiki_pipeline.md  rag-소스-저작권-검토.md  review-팀설계-섹션6-7.md  슈타인즈 게이트 위키 구축 플랜 초안.md  위키 페이지 변화 추적 및 작성 근거 관리 아이디어 초안.md
hooks/: pre-push
ideas/: SG 위키 현실 구축 계획.md  sg 위키 유지 관리 계획.md  wsl 에러보고서.md  제안 처리 팀 설계.md
overrides/: main.html
prompts/: local_completion_wrapper.md  wiki_qa_extraction_system.md  wiki_qa_extraction_user_template.md  wiki_writing_system.md  wiki_writing_user_template.md
scripts/: build_qaset_index.py  fetch_fandom_episodes.mjs  gen_episodes_readme.mjs  generate-data.py  humanize_coverage.mjs  humanize_fact_guard.py  humanize_protect_quotes.py  inject-descriptions.py  p6_cluster_miner.mjs  p6_demand_queue.mjs  p6_demand_queue.test.mjs  poll_suggestions.py  qa_wiki_extract_langchain.py  qa_wiki_pipeline.py  query_fandom_episodes.py  run_holyclaude_pipeline.mjs  test_humanize_fact_guard.py  test_humanize_protect_quotes.py  test_p6_cluster_miner.mjs  test_wiki_link_lint.py  validate_ontology.py  wiki_link_lint.py  wiki_work_registry.mjs  wiki_work_registry.test.mjs
sg-worldline-map/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  (+1 more)
(+596 files in other folders)
