[project]
name = "fg-lab-kr"
version = "0.1.0"
description = "Steins;Gate Korean QA wiki extraction pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv]
package = false
